# quantum-cracker

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  MANUAL.md  PAPER.md  PARITY-THEORY.md  PROGRESS.md  README.md  REBUILD.md  build_c.py  pyproject.toml
csrc/: Makefile  ec_arith.c  ec_arith.h  ising_core.c  ising_core.h  test_ec_arith.c
scripts/: benchmark_c_accel.py
scripts/experiment/: accumulate_bits.py  blind_freq_sweep.py  blind_test.py  differential_power_analysis.py  dlp_algorithm_battery.py  ec_cloud.py  ec_harmonics.py  ec_trace_reversibility.py  ecdh_security_analysis.py  fair_fight.py  generate_final_report.py  grover_ecdlp_simulator.py  grover_hybrid_attack.py  harmonic_key_storage.py  index_calculus_impossibility.py  information_smearing_analysis.py  invalid_curve_attack.py  large_grid_crack.py  lattice_hnp_attack.py  mov_pairing_attack.py  multi_target_batch.py  neural_net_oracle.py  no_norm_crack.py  orthogonal_crack.py  parity_ecdlp.py  parity_vs_penrose.py  partial_key_exposure.py  peer_review_validation.py  phase1_multikey_oracle.py  phase2_differential_harmonics.py  phase3_double_add_trail.py  phase4_crossmethod_consistency.py  phase5_multikey_validation.py  phase5_resonance_oracle.py  pohlig_hellman_deep_dive.py  pollard_rho_kangaroo_fixed.py  pure_crack.py  pure_crack_v2.py  quantum_ghost_key.py  quantum_walk_bitcoin.py  (+13 more)
src/quantum_cracker/: __main__.py
src/quantum_cracker/accel/: __init__.py  _ising.py  (+1 more)
tests/: test_c_accel.py  test_harmonic_compiler.py  test_integration.py  test_metrics.py  test_plots.py  test_utils.py  test_validation.py
(+15 files in other folders)
